# QDC_demonstration

./: .gitignore
.github/workflows/: pages.yml
qdc-web/: .gitignore  Cargo.toml  README.md  app.js  build.ps1  build.sh  index.html  plotting.js  styles.css  worker.js
qdc-web/crates/qdc-core/: Cargo.toml
qdc-web/crates/qdc-core/src/: bindings.rs  decimation.rs  filter.rs  filter_design.rs  lib.rs  processing.rs  readers.rs  tdms.rs
qdc-web/crates/qdc-core/tests/: filter_design_match_scipy.rs  filter_match_scipy.rs  tdms_match_nptdms.rs
qdc-web/crates/qdc-core/tests/refdata/: dump_tdms_reference.py  filter_refs.json  generate_filter_refs.py  inspect_tdms.py
qdc-web/crates/qdc-core/tests/refdata/tdms_refs/: index.json
qdc-web/pkg/: package.json  qdc_core.d.ts  qdc_core.js  qdc_core_bg.wasm  qdc_core_bg.wasm.d.ts
