[package]
name = "qdc-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Quasi-DC field log processing core (WASM build)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
thiserror = "1"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Blob",
    "File",
    "FileReader",
    "FileReaderSync",
]

[dev-dependencies]
# Native tests (run on host, not WASM)
approx = "0.5"
serde_json = "1"
base64 = "0.22"

# The wasm-opt bundled with wasm-pack 0.14 needs --enable-bulk-memory to accept
# the bulk memory ops modern rustc emits. Without these flags the post-build
# optimiser rejects the artifact.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
